:technologist: refactoring code

--- a/contact.html
+++ b/contact.html
@@ -1,96 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Foodies</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Roboto&display=swap"
-        rel="stylesheet">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/contact.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Foodies</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Roboto&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
 <header class="header_contact">
-  <div class="header_box">
-    <h1 class="header_title"><a href="./">Foodies</a></h1>
-    <nav class="pc_header">
-      <ul class="header_menu">
-        <li class="header_menu_list"><a href="about_us.html">About Us</a></li>
-        <li class="header_menu_list"><a href="recipes.html">Recipes</a></li>
-        <li class="header_menu_list"><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <div id="nav-wrapper" class="nav-wrapper sp_header">
-      <div class="hamburger" id="js-hamburger">
-        <span class="hamburger__line hamburger__line--1"></span>
-        <span class="hamburger__line hamburger__line--2"></span>
-        <span class="hamburger__line hamburger__line--3"></span>
-      </div>
-      <nav class="sp-nav">
-        <ul class="sp_menu">
-          <li><a href="about_us.html">About Us</a></li>
-          <li><a href="recipes.html">Recipes</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <ul class="footer_sns">
-          <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a></li>
-          <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
-                                                                       alt="Facebook"></a></li>
-          <li><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg"
-                                                                        alt="Instagram"></a></li>
-        </ul>
-      </nav>
-      <div class="black-bg" id="js-black-bg"></div>
+    <div class="header_box">
+        <h1 class="header_title"><a href="./">Foodies</a></h1>
+        <nav class="pc_header">
+            <ul class="header_menu">
+                <li class="header_menu_list"><a href="about_us.html">About Us</a></li>
+                <li class="header_menu_list"><a href="recipes.html">Recipes</a></li>
+                <li class="header_menu_list"><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <div id="nav-wrapper" class="nav-wrapper sp_header">
+            <div class="hamburger" id="js-hamburger">
+                <span class="hamburger__line hamburger__line--1"></span>
+                <span class="hamburger__line hamburger__line--2"></span>
+                <span class="hamburger__line hamburger__line--3"></span>
+            </div>
+            <nav class="sp-nav">
+                <ul class="sp_menu">
+                    <li><a href="about_us.html">About Us</a></li>
+                    <li><a href="recipes.html">Recipes</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+                <ul class="footer_sns">
+                    <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a>
+                    </li>
+                    <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
+                                                                                 alt="Facebook"></a></li>
+                    <li><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg"
+                                                                                  alt="Instagram"></a></li>
+                </ul>
+            </nav>
+            <div class="black-bg" id="js-black-bg"></div>
+        </div>
     </div>
-  </div>
-  <h2 class="header_main_title sub_menu_title">Contact</h2>
+    <h2 class="header_main_title sub_menu_title">Contact</h2>
 </header>
 <main class="contents_box">
-  <h3 class="contents_title">Contact</h3>
-  <p class="contents_text">Have something you’d like to let us know?</p>
-  <p class="contents_text">Whether you have a comment on a recipe or an idea to share, we would love to hear from you</p>
-  <form id="form" action="/">
-    <div class="input-control">
-      <label for="username">Name</label>
-      <input id="username" name="username" type="text" aria-required="true">
-      <div class="error"></div>
-    </div>
-    <div class="input-control">
-      <label for="email">Email</label>
-      <input id="email" name="email" type="text" aria-required="true">
-      <div class="error"></div>
-    </div>
-    <div class="input-control">
-      <label for="comment">Comment</label>
-      <textarea name="comment" id="comment" cols="30" rows="10" aria-required="true"></textarea>
-      <div class="error"></div>
-    </div>
-    <button type="submit">Sign Up</button>
-  </form>
+    <h3 class="contents_title">Contact</h3>
+    <p class="contents_text">Have something you’d like to let us know?</p>
+    <p class="contents_text">Whether you have a comment on a recipe or an idea to share, we would love to hear from
+        you</p>
+    <form id="form" action="/">
+        <div class="input-control">
+            <label for="username">Name</label>
+            <input id="username" name="username" type="text" aria-required="true">
+            <div class="error"></div>
+        </div>
+        <div class="input-control">
+            <label for="email">Email</label>
+            <input id="email" name="email" type="text" aria-required="true">
+            <div class="error"></div>
+        </div>
+        <div class="input-control">
+            <label for="comment">Comment</label>
+            <textarea name="comment" id="comment" cols="30" rows="10" aria-required="true"></textarea>
+            <div class="error"></div>
+        </div>
+        <button type="submit">Sign Up</button>
+    </form>
 </main>
 <footer>
-  <div class="footer_box">
-    <h2 class="footer_title"><a href="">Foodies</a></h2>
-    <div class="footer_link_box">
-      <nav>
-        <ul class="footer_nav_list">
-          <li><a href="">About us</a></li>
-          <li><a href="">Recipes</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
-      </nav>
-      <ul class="footer_sns">
-        <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a></li>
-        <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
-                                                                     alt="Facebook"></a></li>
-        <li><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg"
-                                                                      alt="Instagram"></a></li>
-      </ul>
+    <div class="footer_box">
+        <h2 class="footer_title"><a href="">Foodies</a></h2>
+        <div class="footer_link_box">
+            <nav>
+                <ul class="footer_nav_list">
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Recipes</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+            <ul class="footer_sns">
+                <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a></li>
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
+                                                                             alt="Facebook"></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg"
+                                                                              alt="Instagram"></a></li>
+            </ul>
+        </div>
     </div>
-  </div>
-  <p class="footer_copy">Copyright © 2021 Foodies. All Rights Reserved.</p>
+    <p class="footer_copy">Copyright © 2021 Foodies. All Rights Reserved.</p>
 </footer>
 <script src="js/nav_menu.js"></script>
 <script src="js/form.js"></script>
