--- a/recipe_detail.html
+++ b/recipe_detail.html
@@ -1,119 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Foodies</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Roboto&display=swap"
-        rel="stylesheet">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/recipe_detail.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Foodies</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&family=Roboto&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/recipe_detail.css">
 </head>
 <body>
 <header class="header_recipes_detail">
-  <div class="header_box">
-    <h1 class="header_title"><a href="./">Foodies</a></h1>
-    <nav class="pc_header">
-      <ul class="header_menu">
-        <li class="header_menu_list"><a href="about_us.html">About Us</a></li>
-        <li class="header_menu_list"><a href="recipes.html">Recipes</a></li>
-        <li class="header_menu_list"><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <div id="nav-wrapper" class="nav-wrapper sp_header">
-      <div class="hamburger" id="js-hamburger">
-        <span class="hamburger__line hamburger__line--1"></span>
-        <span class="hamburger__line hamburger__line--2"></span>
-        <span class="hamburger__line hamburger__line--3"></span>
-      </div>
-      <nav class="sp-nav">
-        <ul class="sp_menu">
-          <li><a href="about_us.html">About Us</a></li>
-          <li><a href="recipes.html">Recipes</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-        <ul class="footer_sns">
-          <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a></li>
-          <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
-                                                                       alt="Facebook"></a></li>
-          <li><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg"
-                                                                        alt="Instagram"></a></li>
-        </ul>
-      </nav>
-      <div class="black-bg" id="js-black-bg"></div>
+    <div class="header_box">
+        <h1 class="header_title"><a href="./">Foodies</a></h1>
+        <nav class="pc_header">
+            <ul class="header_menu">
+                <li class="header_menu_list"><a href="about_us.html">About Us</a></li>
+                <li class="header_menu_list"><a href="recipes.html">Recipes</a></li>
+                <li class="header_menu_list"><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <div id="nav-wrapper" class="nav-wrapper sp_header">
+            <div class="hamburger" id="js-hamburger">
+                <span class="hamburger__line hamburger__line--1"></span>
+                <span class="hamburger__line hamburger__line--2"></span>
+                <span class="hamburger__line hamburger__line--3"></span>
+            </div>
+            <nav class="sp-nav">
+                <ul class="sp_menu">
+                    <li><a href="about_us.html">About Us</a></li>
+                    <li><a href="recipes.html">Recipes</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+                <ul class="footer_sns">
+                    <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a>
+                    </li>
+                    <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
+                                                                                 alt="Facebook"></a></li>
+                    <li><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg"
+                                                                                  alt="Instagram"></a></li>
+                </ul>
+            </nav>
+            <div class="black-bg" id="js-black-bg"></div>
+        </div>
     </div>
-  </div>
-  <h2 class="header_main_title sub_menu_title">Thai Red Curry</h2>
+    <h2 class="header_main_title sub_menu_title">Thai Red Curry</h2>
 </header>
 <main class="wrapper">
-  <section class="contents_ingredients">
-    <h3 class="contents_title recipes_detail_title">Ingredients</h3>
-    <dl class="contents_ingredients_box">
-      <dt class="contents_ingredients_title">Thai Red Curry</dt>
-      <dd>
-        <ul class="contents_ingredients_list">
-          <li>3 tbsp vegetable oil (or canola or peanut)</li>
-          <li>1 cup (250 ml) chicken broth/stock , low sodium</li>
-          <li>400 ml / 14 oz coconut milk (full fat!)</li>
-          <li>6 kaffir lime leaves</li>
-          <li>1 tbsp sugar</li>
-          <li>2 tsp fish sauce</li>
-          <li>350g / 12 oz chicken thighs</li>
-          <li>150g / 5 oz pumpkin or butternut squash</li>
-          <li>120g / 4oz green beans</li>
-          <li>12 Thai basil leaves</li>
-        </ul>
-      </dd>
-    </dl>
-    <dl class="contents_ingredients_box">
-      <dt class="contents_ingredients_title">Garnishes (Optiona) & Serving</dt>
-      <dd>
-        <ul class="contents_ingredients_list">
-          <li>Fresh red chilli slices</li>
-          <li>Fresh coriander / cilantro leaves</li>
-          <li>Steamed jasmine rice</li>
-        </ul>
-      </dd>
-    </dl>
-  </section>
-  <section class="contents_instructions">
-    <h3 class="contents_title recipes_detail_title">Instructions</h3>
-    <ol class="contents_instructions_list">
-      <li>Heat oil in a large heavy based skillet over medium high heat.</li>
-      <li>Add curry paste and Extras (if using jar paste) and cook for about 2 minutes so it "dries out"</li>
-      <li>Add chicken broth and stir to dissolve paste. Simmer rapidly for 3 minutes or until liquid reduces by half.</li>
-      <li>Add coconut milk, lime leaves, sugar and fish sauce. Stir, then add chicken.</li>
-      <li>Spread chicken out, bring to simmer, then turn heat down to medium. Simmer for about 8- 10 minutes or until Sauce reduces, the chicken is cooked and the sauce is almost at the thickness you want.</li>
-      <li>Do a taste test. Add more fish sauce (or even shrimp paste) to add more saltiness, sugar for sweetness.</li>
-      <li>Add pumpkin and beans, stir. Cook for 3 minutes or until pumpkin is just cooked through and Sauce is thickened - see video for Sauce thickness.</li>
-      <li>Remove from heat. Stir through a handful of Thai basil leaves.</li>
-      <li>Serve over jasmine rice, garnished with fresh red chilli slices and fresh coriander/cilantro leaves, if desired.</li>
-    </ol>
-  </section>
+    <section class="contents_ingredients">
+        <h3 class="contents_title recipes_detail_title">Ingredients</h3>
+        <dl class="contents_ingredients_box">
+            <dt class="contents_ingredients_title">Thai Red Curry</dt>
+            <dd>
+                <ul class="contents_ingredients_list">
+                    <li>3 tbsp vegetable oil (or canola or peanut)</li>
+                    <li>1 cup (250 ml) chicken broth/stock , low sodium</li>
+                    <li>400 ml / 14 oz coconut milk (full fat!)</li>
+                    <li>6 kaffir lime leaves</li>
+                    <li>1 tbsp sugar</li>
+                    <li>2 tsp fish sauce</li>
+                    <li>350g / 12 oz chicken thighs</li>
+                    <li>150g / 5 oz pumpkin or butternut squash</li>
+                    <li>120g / 4oz green beans</li>
+                    <li>12 Thai basil leaves</li>
+                </ul>
+            </dd>
+        </dl>
+        <dl class="contents_ingredients_box">
+            <dt class="contents_ingredients_title">Garnishes (Optiona) & Serving</dt>
+            <dd>
+                <ul class="contents_ingredients_list">
+                    <li>Fresh red chilli slices</li>
+                    <li>Fresh coriander / cilantro leaves</li>
+                    <li>Steamed jasmine rice</li>
+                </ul>
+            </dd>
+        </dl>
+    </section>
+    <section class="contents_instructions">
+        <h3 class="contents_title recipes_detail_title">Instructions</h3>
+        <ol class="contents_instructions_list">
+            <li>Heat oil in a large heavy based skillet over medium high heat.</li>
+            <li>Add curry paste and Extras (if using jar paste) and cook for about 2 minutes so it "dries out"</li>
+            <li>Add chicken broth and stir to dissolve paste. Simmer rapidly for 3 minutes or until liquid reduces by
+                half.
+            </li>
+            <li>Add coconut milk, lime leaves, sugar and fish sauce. Stir, then add chicken.</li>
+            <li>Spread chicken out, bring to simmer, then turn heat down to medium. Simmer for about 8- 10 minutes or
+                until Sauce reduces, the chicken is cooked and the sauce is almost at the thickness you want.
+            </li>
+            <li>Do a taste test. Add more fish sauce (or even shrimp paste) to add more saltiness, sugar for
+                sweetness.
+            </li>
+            <li>Add pumpkin and beans, stir. Cook for 3 minutes or until pumpkin is just cooked through and Sauce is
+                thickened - see video for Sauce thickness.
+            </li>
+            <li>Remove from heat. Stir through a handful of Thai basil leaves.</li>
+            <li>Serve over jasmine rice, garnished with fresh red chilli slices and fresh coriander/cilantro leaves, if
+                desired.
+            </li>
+        </ol>
+    </section>
 </main>
 <footer>
-  <div class="footer_box">
-    <h2 class="footer_title"><a href="">Foodies</a></h2>
-    <div class="footer_link_box">
-      <nav>
-        <ul class="footer_nav_list">
-          <li><a href="">About us</a></li>
-          <li><a href="">Recipes</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
-      </nav>
-      <ul class="footer_sns">
-        <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a></li>
-        <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
-                                                                     alt="Facebook"></a></li>
-        <li><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg"
-                                                                      alt="Instagram"></a></li>
-      </ul>
+    <div class="footer_box">
+        <h2 class="footer_title"><a href="">Foodies</a></h2>
+        <div class="footer_link_box">
+            <nav>
+                <ul class="footer_nav_list">
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Recipes</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </nav>
+            <ul class="footer_sns">
+                <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a></li>
+                <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
+                                                                             alt="Facebook"></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg"
+                                                                              alt="Instagram"></a></li>
+            </ul>
+        </div>
     </div>
-  </div>
-  <p class="footer_copy">Copyright © 2021 Foodies. All Rights Reserved.</p>
+    <p class="footer_copy">Copyright © 2021 Foodies. All Rights Reserved.</p>
 </footer>
 <script src="js/nav_menu.js"></script>
 </body>
