--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
                 <ul class="footer_sns">
-                    <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a></li>
+                    <li><a href="https://twitter.com/" target="_blank"><img src="images/twitter.svg" alt="Twitter"></a>
+                    </li>
                     <li><a href="https://www.facebook.com/" target="_blank"><img src="images/facebook.svg"
                                                                                  alt="Facebook"></a></li>
                     <li><a href="https://www.instagram.com/" target="_blank"><img src="images/instagram.svg"
@@ -78,7 +79,7 @@
                 <a href="recipe_detail.html">
                     <dl>
                         <dt class="recipe_image"><img src="./images/recipes/recipe2.png"
-                                                           alt="Chocolate Chip Cookies"></dt>
+                                                      alt="Chocolate Chip Cookies"></dt>
                         <dt class="recipe_category">Sweets</dt>
                         <dt class="recipe_title">Chocolate Chip Cookies</dt>
                         <dd class="recipe_des">
@@ -113,7 +114,7 @@
             <li>
                 <dl>
                     <dt class="recipe_image"><img src="./images/recipes/recipe5.png"
-                                                       alt="Salmon with Creamy Spinachi"></dt>
+                                                  alt="Salmon with Creamy Spinachi"></dt>
                     <dt class="recipe_category">Seafood</dt>
                     <dt class="recipe_title">Salmon with Creamy Spinachi</dt>
                     <dd class="recipe_des">
